just did my first solo challange

--- a/index.html
+++ b/index.html
@@ -27,19 +27,23 @@
 
   <div>
     <h3>Comments</h3>
-    <div id='list' class='comments'></div>
+    <div id='list' class='comments'>
+      
+    </div>
 
+    
     <h3>Leave a comment</h3>
+    <div class="mycomment">
 
+      </div>
     <form id="comment-form" action="">
-      <input type='text' name="comment" id="comment-input" cols="30" rows="10">
+      <input type='text' name="comment" id="comment-input" cols="30" rows="10" placeholder="my new comment">
       </br>
-      <button id='submit'>submit</button>
+      <input type="submit">
     </form>
 
   </div>
-
-  <script src="js/index.min.js"></script>
+ <!-- <script src="js/index.min.js"></script>-->
   <script src="js/challenge.js"></script>
 </body>
 </html>
